# vedirect

./: README.md  pyproject.toml
examples/: vedirect_mqtt.py  vedirect_print.py
src/vedirect/: defines.py  vedirect.py  vedirect_device_emulator.py
tests/: test_vedirect.py
