[project]
name = "vedirect"
version = "0.1.0"
authors = [
  {name = "Jan Zgadzaj",email = "jan.zgadzaj@googlemail.com"}
]
description = "Read Victron VEDirect Devices"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'pyserial',
] 

[project.scripts]
vedirect = "vedirect.vedirect:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"